# Structured-Product-Project

./: .gitignore  README.md  Readme.md  launch.js  package-lock.json  package.json
AddonJS/: CMakeLists.txt  README.md  index.js  marketvalue.txt  package-lock.json  package.json
AddonJS/headers/financialProducts/: Performance.hpp
AddonJS/headers/montecarlo/: MonteCarlo.hpp
AddonJS/headers/utils/: Date.hpp  MarketData.hpp  Utils.hpp
AddonJS/src/: MyPnlObject.cpp  MyPnlObject.hpp  main.cpp  pnl_api.cpp  pnl_api.hpp
AddonJS/src/financialProducts/: Performance.cpp
AddonJS/src/fs/: ParseCsv.cpp
AddonJS/src/models/: BlackScholesModel.cpp
AddonJS/src/montecarlo/: MonteCarlo.cpp
AddonJS/src/strategies/: simple.cpp  simpleBis.cpp  simpleRebalancingEachDay.cpp  simplewithrates.cpp
AddonJS/src/utils/: MarketData.cpp  Utils.cpp
Frontend/: package-lock.json  package.json
Frontend/src/: App.js  index.css  index.js
Frontend/src/components/: adminController.js  chart.js  chartForm.js  chartProductForm.js  login.component.js  navbar.js  productManager.js  signup.component.js
backend-web/: .env  bmt.sqlite  deploy.js  package-lock.json  package.json
backend-web/DATA/: 7203.T.csv  9020.T.csv  A.csv  AGCO.csv  BRFSN.MX.csv  BWA.csv  CF.csv  CMI.csv  CNR.TO.csv  CSX.csv  DE.csv  DHR.csv  DSM.AS.csv  ECL.csv  EMR.csv  ETN.csv  FLS.csv  K.csv  LIN.DE.csv  MDLZ.csv  MOS.csv  PNR.csv  ROP.csv  SIE.DE.csv  SU.PA.csv  TMO.csv  TSE.csv  UU.L.csv  VIE.PA.csv  XYL.csv
backend-web/RATE/: CADEUR=X.csv  EUR=X.csv  GBPEUR=X.csv  JPYEUR=X.csv  MXNEUR=X.csv
backend-web/addon/: testaddon.node
backend-web/srcBack/: server.js
backend-web/srcBack/controllers/: assets.js  pricingLib.js  spots.js  token.js  user.js
backend-web/srcBack/models/: assets.js  database.js  spots.js  users.js
backend-web/srcBack/routes/: assets.js  pricingLib.js  router.js  spots.js  token.js  user.js
pricer_skel/: CMakeLists.txt
pricer_skel/data/: callVanilleProf.csv  data.csv  dataBasket.csv
pricer_skel/data/DATA/: 7203.T.csv  9020.T.csv  A.csv  AGCO.csv  BRFSN.MX.csv  BWA.csv  CF.csv  CMI.csv  CNR.TO.csv  CSX.csv  DE.csv  DHR.csv  DOW.csv  DSM.AS.csv  ECL.csv  EMR.csv  ETN.csv  FLS.csv  K.csv  LIN.DE.csv  MDLZ.csv  MOS.csv  PNR.csv  ROP.csv  SIE.DE.csv  SU.PA.csv  TMO.csv  TSE.csv  UU.L.csv  VIE.PA.csv  XYL.csv
pricer_skel/data/DATA_DEVISES/: AUD_USD.csv  EUR_CHF.csv  EUR_GBP.csv  EUR_JPY.csv  EUR_USD.csv  GBP_JPY.csv  GBP_USD.csv  USD_CHF.csv  USD_JPY.csv
pricer_skel/data/RATE/: BRLEUR=X.csv  CADEUR=X.csv  CHFEUR=X.csv  EUR=X.csv  GBPEUR=X.csv  JPYEUR=X.csv  MXNEUR=X.csv
pricer_skel/data/RATES/: BRLEUR=X.csv  CADEUR=X.csv  CHFEUR=X.csv  EUR=X.csv  GBPEUR=X.csv  JPYEUR=X.csv
pricer_skel/headers/: MarketData.hpp
pricer_skel/headers/financialProducts/: Derivative.hpp  Performance.hpp  VanillaCall.hpp
pricer_skel/headers/fs/: ParseYahooCsv.hpp
pricer_skel/headers/models/: BlackScholesModel.hpp
pricer_skel/headers/montecarlo/: MonteCarlo.hpp
pricer_skel/headers/spdlog/: log.hpp
pricer_skel/headers/utils/: MarketData.hpp
pricer_skel/scripts/: Delta_en_t.txt  Pnl.txt  Untitled.ipynb  histo.py  market_value.py  printCurve.py  printHisto.py  tests.py
pricer_skel/src/: BlackScholesModel.cpp  BlackScholesModel.hpp  Date.cpp  Date.hpp  MarketData.cpp  MarketData.hpp  MonteCarlo.cpp  MonteCarlo.hpp  Option.hpp  ParseCsv.cpp  ParseCsv.hpp  ParseYahooCsv.cpp  Performance.cpp  Performance.hpp  ProduitDerive.hpp  TestHedge.cpp  TestPriceCall.cpp  TestPriceDateCall.cpp  TestSimulMarket.cpp  TestSize0.cpp  TestSizeDifferents.cpp  TestUtils.cpp  Utils.cpp  Utils.hpp  VanillaCall.cpp  VanillaCall.hpp  testDate.cpp  testMarketData.cpp  testParser.cpp  testPerformance.cpp
pricer_skel/src/financialProducts/: Performance.cpp  Stock.hpp  VanillaCall.cpp
pricer_skel/src/fs/: ParseCsv.cpp  ParseYahooCsv.cpp
pricer_skel/src/models/: BlackScholesModel.cpp
pricer_skel/src/montecarlo/: MonteCarlo.cpp
pricer_skel/src/spdlog/: log.cpp
pricer_skel/src/strategies/: deltasForAday.cpp  simple.cpp  simpleBis.cpp  simpleRebalancingEachDay.cpp  simpleWindow.cpp  simplewithrates.cpp
pricer_skel/src/tests/: TestHedge.cpp  TestPriceCall.cpp  TestPriceDateCall.cpp  TestPrintDeltaEnt.cpp  TestPrintPnl.cpp  TestSimulMarket.cpp  TestSize0.cpp  TestSizeDifferents.cpp  TestUtils.cpp  TestVanillaCallPrixent.cpp  googletest.cpp  testCallHEqualN.cpp  testCallVanille.cpp  testDate.cpp  testLogger.cpp  testMarketData.cpp  testPerformance.cpp  testResultsPrintVanilla.cpp  testVanilleDiv.cpp  testVanillePrintDelta.cpp  testWriting.cpp
pricer_skel/src/tests/oldTests/: TestHedge.cpp  TestPriceCall.cpp  TestPriceDateCall.cpp
pricer_skel/src/utils/: Date.cpp  MarketData.cpp  Utils.cpp
